--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="settings">Settings</string>
     <string name="dark_mode">Dark mode</string>
     <string name="sign_out">Sign out</string>
+    <string name="profil">Profil</string>
 </resources>
